fix white space wrapping

--- a/src/styles/prism-vsc-dark-plus.css
+++ b/src/styles/prism-vsc-dark-plus.css
@@ -5,7 +5,7 @@ code[class*="language-"] {
 	font-family: Menlo, Monaco, Consolas, "Andale Mono", "Ubuntu Mono", "Courier New", monospace;
 	direction: ltr;
 	text-align: left;
-	white-space: pre;
+	white-space: pre-wrap; /*https://stackoverflow.com/questions/50683201/prismjs-no-line-breaks*/
 	word-spacing: normal;
 	word-break: normal;
 	line-height: 1.5;
